macros/tests/trybuild/static.stderr
error: cannot use `serde_args::generate` macro on static
 --> tests/trybuild/static.rs:4:1
  |
4 | static FOO: usize = 0;
  | ^^^^^^^^^^^^^^^^^^^^^^
