macros/tests/trybuild/static.rs
use serde_args_macros::generate;

#[generate]
static FOO: usize = 0;

fn main() {}
